Initial release: Comprehensive PySpark practice modules with documentation and report